--- a/style.css
+++ b/style.css
@@ -1,90 +1,115 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
 
 .work-sans-font {
   font-family: "Work Sans", sans-serif;
-  font-weight: 300;
+  font-optical-sizing: auto;
+  font-weight: 400;
   font-style: normal;
 }
+ 
+  
 
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.header{
-    padding: 50px 240px;
-    background-color: rgba(255, 216, 14, 0.1);
-}
 /* shared styles */
-.margin-right{
-    margin-right: 40px;
-}
-.btn{
-    padding: 21px 25px;
-    font-size: 1.2rem;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    background-color: #ff900e;
-}
-.text-light-gray{
-    color: #727272;
-}
-.text-gray{
-    color: #424242;
-}
 .display-flex{
     display: flex;
 }
-/* navbar realted styles */
+
+.text-primary{
+    color: #FF900E;
+}
+
+/* dark 02 */
+.text-gray{
+    color: #424242;
+}
+
+/* dark03 */
+.text-light-gray{
+    color: #727272;
+}
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+.btn-primary{
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+}
+
+
+
+
+
+
+
+
+
+/* navbar related styles */
 .navbar{
     justify-content: space-between;
-    margin-bottom: 102px;
-    
-}
-.nav-link{
-    text-decoration: none;
-    font-size:1rem;
-}
-.nav-item{
-    
-    
-    list-style: none;
-    
+    align-items: center;
     
 
+   
+    
+    
 }
-.nav-title{
+
+.brand{
+    font-weight: 700;
     font-size: 3rem;
-    font-weight: bold;
-    color: #131313;
+    
+    
 }
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.navbar, .banner{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
 /* banner related styles */
-.banner-image{
-    width: 100%;
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 102px;
 }
+
 .banner-title{
+    font-weight: 700;
     font-size: 4rem;
-    font-weight: bold;
-    margin-bottom: 33px;
+    margin-bottom: 20px;
 }
 .banner-description{
     line-height: 26px;
-    margin-bottom: 33px;
-}
-.banner-contant{
-    text-align: center;
-    max-width: 862px;
-    margin: 0 auto;
-}
-.btn-primary{
-    margin-bottom: 50px;
+    margin-bottom: 26px;
 }
 
+.banner-image{
+    width: 100%;
+}
+@media screen and (max-width:576px) {
+    .navbar, 
+    .nav-links{
+        flex-direction: column;
+    }
 
-
-
-
-
+    
+}
