--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
 .display-flex{
     display: flex;
 }
+.font-size-weight{
+    font-size: 2.81rem;
+    font-weight: bold;
+}
 
 .text-primary{
     color: #FF900E;
@@ -196,6 +200,80 @@
     font-weight: 600;
 
  }
+ /* some facts realated styles */
+ .some-facts{
+    max-width: 1370px;
+    margin: 0 auto;
+    margin-top: 130px;
+ }
+ .some-facts-p{
+    font-size: 1rem;
+    
+    
+ }
+ .facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-left: 30px;
+    margin-top: 100px;
+ }
+ .fact-card{
+    
+    border: solid #FF900E;
+    border-radius: 8px;
+    width: 241px;
+    height: 241px;
+    justify-content: center;
+   align-items: center;
+   text-align: center;
+    
+ }
+ .fact-card h1{
+    font-size: 2.81rem; 
+    font-weight: 600; 
+    color: #424242;
+    margin-bottom: 5px;
+ }
+ .fact-card img{
+   margin-bottom: 9px;
+   max-width: 47px;
+ }
+ .fact-card p{
+    font-size: 1.2rem; 
+    font-weight: 600; 
+    color: #727272;
+ }
+ /* our sponspors realated styles */
+ .sponspors-info{
+    max-width: 542px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 160px;
+ }
+ .sponspors-logo{
+    max-width: 1370px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    gap: 130px;
+
+ }
+ .sponspors-logo img{
+    max-width: 130px;
+
+ }
+ /* footer realated styles */
+ footer{
+    
+    margin-top: 130px;
+    margin-bottom: 210px;
+   
+    text-align: center;
+   
+    border-radius: 8px;
+
+ }
 
 @media screen and (max-width:576px) {
     .navbar, 
@@ -216,6 +294,34 @@
     margin-left: 0px;
     margin-top: 10px;
 }
+.facts-container {
+   grid-template-columns: repeat(1, 1fr);
+   gap: 20px;
+   
+}
+.facts-container {
+    
+    margin-left: 0px;
+    margin-right: 0px;
+    
+   
+}
+.fact-card{
+    width: 90%;
+    
+}
+.sponspors-logo{
+   flex-direction: column;
+   align-items: center;
+   
+
+
+ }
+  .sponspors-info{
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+ }
    
 }
 
