--- a/style.css
+++ b/style.css
@@ -274,6 +274,9 @@
     border-radius: 8px;
 
  }
+ .hide{
+    display: none !important;
+ }
 
 @media screen and (max-width:576px) {
     .navbar, 
@@ -322,6 +325,54 @@
     margin-right: 0;
     width: 100%;
  }
+ 
    
+}
+@media screen and (min-width:576px) and (max-width:992px){
+    .features {
+   flex-direction: column;
+   width: 95%;
+}
+.Dexktop-card, .Drag-card, .Awesome-card, .Super-card {
+   
+    padding: 60px;
+    
+}
+.Dexktop-card h1, .Drag-card h1, .Awesome-card h1, .Super-card h1 {
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+.Features-div1 p, .Dexktop-card p, .Drag-card p, .Awesome-card p, .Super-card p, .p,.some-fact-p {
+    line-height: 26px;
+    font-size: 1.2rem;
+}
+.team-container{
+    flex-direction: column;
+}
+.our-features {
+    width: 80%;
+    margin-left: 0px;
+    
+}
+.facts-container {
+   
+    grid-template-columns: repeat(2, 1fr);
+   
+}
+.fact-card {
+   margin-bottom: 60px;
+}
+.sponspors-logo {
+   flex-wrap: wrap;
+}
+
+
+
+
+    
+
+
+
+    
 }
 
