--- a/style.css
+++ b/style.css
@@ -156,6 +156,8 @@
     font-size: 2.4rem;
     font-family: bold;
     margin-bottom: 24px;
+    border-left: 5px solid #FF900E;
+    
     
 }
 .Features-div1 p{
@@ -364,6 +366,11 @@
 }
 .sponspors-logo {
    flex-wrap: wrap;
+}
+.speacial-btn {
+   
+    margin-left:150px;
+    margin-top: -130px;
 }
 
 
